# tinyboy-snake

./: CMakeLists.txt  CMakePresets.json  config.h  include.h
.devcontainer/: devcontainer.json
device/tinyboy/: _config.h  _makefile.inc  tinyboy.c  tinyboy_bat.c  tinyboy_disp.c  tinyboy_draw.c  tinyboy_init.c  tinyboy_key.c  tinyboy_snd.c
src/: main.c  main.h  snake.c  snake.h
